tests/rosetta/out/C/call-a-function-12.error
cc: exit status 1
/tmp/call-a-function-12.c: In function ‘_lambda2’:
/tmp/call-a-function-12.c:25:30: warning: implicit declaration of function ‘mysum’ [-Wimplicit-function-declaration]
   25 | int _lambda2(int y) { return mysum(_lambda2_x, y); }
      |                              ^~~~~
/tmp/call-a-function-12.c: At top level:
/tmp/call-a-function-12.c:46:5: error: redefinition of ‘main’
   46 | int main() {
      |     ^~~~
/tmp/call-a-function-12.c:33:5: note: previous definition of ‘main’ with type ‘int()’
   33 | int main() {
      |     ^~~~
